--- a/src/app/assets/scss/components/button.scss
+++ b/src/app/assets/scss/components/button.scss
@@ -11,12 +11,13 @@
   transition: background-color 0.3s ease, color 0.3s ease;
   font-weight: 600;
   border-radius: 5px;
-  
+  font-family: 'inter';
+
   &.default {
     background-color: $primary-color;
     color: white;
     @include hover-darken($primary-color);
-   
+
   }
 
   &.outline {
@@ -98,10 +99,41 @@
     @include gradient-hover-darken($gradient-start, $gradient-end);
     border-radius: 5px;
   }
+
+
+
+
+
+
+
+  &.btn-lg {
+    font-family: 'inter';
+    padding: 12px 24px;
+    font-size: 18px;
+    font-weight: 900;
+  }
+
+  &.btn-md {
+    font-family: 'inter';
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 700;
+  }
+
+  &.btn-sm {
+    font-family: 'inter';
+    padding: 8px 16px;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  &.btn-xs {
+    font-family: 'inter';
+    padding: 6px 12px;
+    font-size: 12px;
+    font-weight: 400;
+  }
 }
-
-
-
 
 .waves-effect {
   position: relative;
@@ -112,11 +144,10 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-
-  -webkit-tap-highlight-color: transparent
+  -webkit-tap-highlight-color: transparent;
 }
 
 .waves-light {
-  background: rgba(255, 255, 255, .4);
-  background: radial-gradient(rgba(255, 255, 255, .2) 0, rgba(255, 255, 255, .3) 40%, rgba(255, 255, 255, .4) 50%, rgba(255, 255, 255, .5) 60%, rgba(255, 255, 255, 0) 70%)
+  background: rgba(255, 255, 255, 0.4);
+  background: radial-gradient(rgba(255, 255, 255, 0.2) 0, rgba(255, 255, 255, 0.3) 40%, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.5) 60%, rgba(255, 255, 255, 0) 70%);
 }
